refactor: Reorganize and update OOPS notes content, renumbering files, and updating the navigation structure.